# pulse

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REFACTOR_REPORT.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backup.yml  codeql.yml  dependency-review.yml  ios-ci-skip.yml  ios-ci.yml  scorecard.yml  security.yml  server-ci-skip.yml  server-ci.yml
alembic/versions/: 20260518_000001_progress_photo_tags.py
docs/: ci-cd.md
ios/: .gitignore  .swiftlint.yml  project.yml
ios/Pulse/: PulseApp.swift
ios/PulseTests/: .swiftlint.yml  ActivityClientTests.swift  ActivityFeedModelTests.swift  ActivityGroupTests.swift  ActivityModelTests.swift  ActivityTrendsModelTests.swift  ApplyBatchModelTests.swift  AuthorizedAsyncImageTests.swift  AutoTagAssignmentTests.swift  BatchCompositionModelTests.swift  ConfirmEntriesTests.swift  CopyEntriesTests.swift  CreateMealClientTests.swift  CustomFoodClientTests.swift  CustomFoodDetailModelTests.swift  Info.plist  (+50 more)
pulse-ios/: .gitignore  CLAUDE.md  project.yml
pulse-server/: Dockerfile  pyproject.toml  schema.sql
server/: .env.example  .trivyignore  Dockerfile  openapi.snapshot.json  pyproject.toml  schema.sql
server/alembic/versions/: 20260406_000001_initial_schema.py  20260506_000001_meals_custom_foods_memory.py  20260508_000001_containers.py  20260509_000001_sessions_table.py  20260510_000001_meal_link_on_entries.py  20260511_000001_add_food_memory_meals_aliases.py  20260513_000001_weight_tracking.py  20260518_000001_progress_photo_tags.py  20260519_000001_progress_photo_idempotency.py  20260524_000001_auth_exchange_codes.py
server/scripts/: backup_db.sh  backup_photos.sh  import_hevy_weights.py  migrate_photos_to_object_store.py  regenerate_progress_thumbs.py
server/src/pulse_server/: app.py  config.py  db.py  log_ids.py  macro_aggregates.py  maintenance.py  observability.py  photo_store.py  usda.py  usda_provider.py
server/src/pulse_server/activity/: __init__.py  apple_parser.py  hevy_parser.py  ids.py  models.py  repository.py
server/src/pulse_server/auth/: __init__.py  google.py  middleware.py
server/src/pulse_server/mcp/: context.py  models.py  server.py  storage.py
server/src/pulse_server/mcp/tools/: __init__.py  container_tools.py  custom_food_tools.py  food_tools.py  meal_tools.py  memory_tools.py  targets_summary_tools.py  weight_tools.py
server/src/pulse_server/models/: __init__.py  activity.py  adapters.py  common.py  custom_foods.py  daily.py  entries.py  food_memory.py  foods.py  meals.py  progress_photo.py  usda.py  weight.py
server/src/pulse_server/repositories/: __init__.py  activity.py  auth_exchange_codes.py  custom_foods.py  entries.py  food_memory.py  foods.py  logs.py  meals.py  progress_photo.py  sessions.py  tables.py  targets.py  weight.py
server/src/pulse_server/routers/: activity.py  auth.py  containers.py  custom_foods.py  entries.py  food_memory.py  foods.py  logs.py  meals.py  measures_photo_tags.py  measures_photos.py  summary.py  targets.py  uploads.py  usda.py  weight.py
server/src/pulse_server/scripts/: __init__.py  dump_openapi.py  import_health_data.py
server/src/pulse_server/services/: activity_cardio.py  activity_service.py  activity_summary.py  alias_utils.py  containers_service.py  custom_foods_service.py  date_utils.py  entries_service.py  food_memory_service.py  foods_service.py  image_processing.py  meals_service.py  normalize.py  progress_photo_service.py  progress_photo_tag_service.py  rate_limit.py  summary_service.py  weight_service.py
server/tests/: conftest.py  test_activity_cardio.py  test_activity_detail_api.py  test_activity_feed_api.py  test_activity_ids.py  test_activity_models.py  test_activity_summary.py  test_activity_summary_api.py  test_activity_tables.py  test_activity_types_api.py  test_activity_week_api.py  test_app.py  test_apple_parser.py  test_auth_google.py  test_auth_middleware.py  test_auth_routes.py  test_auth_sessions.py  test_calories_daily.py  test_config.py  test_container_photos.py  test_containers_api.py  test_custom_foods_api.py  test_db_split.py  test_effective_log_date.py  test_entries_api.py  test_food_entry_model.py  test_food_memory_api.py  test_foods_service.py  test_hevy_parser.py  test_image_processing.py  test_import_hevy_weights.py  test_logs_api.py  test_maintenance.py  test_mcp_auth.py  test_mcp_consumed_at.py  test_mcp_storage.py  test_mcp_tools.py  test_meals_api.py  test_migrate_photos_script.py  test_models.py  (+9 more)
server/tests/fixtures/activity/: apple_sample.xml  hevy_sample.csv
server/tests/integration/: conftest.py  test_activity_linking.py  test_activity_read_repo.py  test_activity_repository.py  test_activity_types_persist.py  test_aliases.py  test_auth_exchange_codes_repo.py  test_auth_integration.py  test_containers_repo.py  test_foods.py  test_import_health_data.py  test_mcp_oauth_storage.py  test_mcp_tool_behavior.py  test_meals_and_memory.py  test_progress_photos_repo.py  test_repositories.py  test_sessions_repository.py  test_weight_integration.py
tests/: test_models.py  test_progress_photo_api.py
(+350 files in other folders)
