[project]
name = "pulse-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "sqlalchemy>=2.0.51",
    "greenlet>=3.5.2",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28",
    "fastmcp>=3.4.2",
    "py-key-value-aio[postgresql]>=0.4.5",
    "google-auth>=2.55.0",
    "requests>=2.34.2",
    "Pillow>=10.4",
    "obstore>=0.10.1",
    "sentry-sdk>=2.63.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "ruff>=0.15.18",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: marks tests that require a real PostgreSQL database",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic ruleset: pyflakes/pycodestyle core plus import sorting, modern-syntax
# upgrades, bug-prone patterns, and async correctness (this is an async SQLAlchemy app).
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately nest `with patch(...)` blocks (SIM117), assert on broad
# exceptions (B017), defer some imports until after module-level env/monkeypatch
# setup (E402), and use long literal fixture/assertion lines (E501).
"tests/**" = ["SIM117", "B017", "E402", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# The pydantic plugin teaches mypy that BaseSettings/BaseModel fields are
# populated at runtime (env vars, validation), so Settings() needs no ignore.
plugins = ["pydantic.mypy"]
# Basic mode, not strict: the codebase is consistently hinted but not exhaustively
# annotated. check_untyped_defs still type-checks un-annotated function bodies.
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["pulse_server"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
